# zahir

./: .coveragerc  .gitignore  AGENTS.md  DEVLOG.md  README.md  docker-compose.yml  main.py  otel-collector-config.yaml  pyproject.toml  requirements.md  ruff.toml  summary.md  test_calls_feature.py  test_semaphore_multiprocess.py  vulture_whitelist.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
bs/: agent.zsh  check.zsh  check:mypy.zsh  clean.zsh  docs  format.zsh  lint  lint.zsh  run:example.sh  send-metrics.py  send-traces.py  test  test.zsh  test:integration.zsh
docs/api/: index.html  search.js  zahir.html
examples/: book_processor.py
grafana/dashboards/: zahir-metrics.json
integration_tests/: main.py
src/: constants.py  effects.py  exception.py  exceptions.py  scope_proxy.py  types.py  workflow.py  zahir_types.py
src/dependencies/: concurrency.py  group.py  resources.py  semaphore.py  sqlite.py  time.py
src/evaluate/: __init__.py  coordination_handlers.py  job_handlers.py  overseer.py  overseer_handlers.py  worker.py  worker_handlers.py
src/queues/: local.py
src/zahir/: __init__.py  emit.py
tests/: __init__.py  conftest.py  shared.py  test_async_workflows.py  test_base_types_coverage.py  test_call_frame.py  test_check_preconditions.py  test_concurrency.py  test_context_queue.py  test_dependency_messages.py  test_dependency_worker.py  test_effects.py  test_enqueue_job.py  test_events.py  test_events_coverage.py  test_exception.py  test_exceptions.py  test_execute_job.py  test_execute_recovery_job.py  test_extension.py  test_group.py  test_handle_await.py  test_handle_job_complete_no_output.py  test_handle_job_exception.py  test_handle_job_output.py  test_handle_job_timeout.py  test_handle_recovery_job_complete_no_output.py  test_handle_recovery_job_exception.py  test_handle_recovery_job_timeout.py  test_imports.py  test_job_arguments_timeouts.py  test_job_decorator_recovery.py  test_job_dependency.py  test_job_worker.py  test_local_workflow_context.py  test_many_jobs_distribution.py  test_memory_event_registry.py  test_memory_job_registry.py  test_metrics.py  test_monitoring.py  (+33 more)
tests/dependencies/: test_concurrency.py  test_dependency.py  test_file.py  test_group.py  test_rate_limit.py  test_resources.py  test_semaphore.py  test_sqlite.py  test_time.py
tests/evaluate/: mocks.py  test_coordination_handlers.py  test_job_handlers.py  test_overseer.py  test_overseer_handlers.py  test_suspension.py  test_worker.py  test_worker_handlers.py
tests/progress_bar/: test_make_telemetry.py  test_progress_bar_state.py  test_rich_display_service.py  test_system_stats.py  test_time_estimator.py  test_waiting_deps.py
tests/ux/: test_user_await_all.py  test_user_concurrency_limit.py  test_user_concurrency_slots.py  test_user_context.py  test_user_dependencies.py  test_user_errors.py  test_user_eventing.py  test_user_function_loading.py  test_user_invalid_effects.py  test_user_mirror_workflow.py  test_user_multicore.py  test_user_multiprocessing.py  test_user_progress_counts.py  test_user_progress_timing.py  test_user_rate_limit.py  test_user_remote_worker.py  test_user_resource_fanout.py  test_user_root_return.py  test_user_setup.py
zahir/: __init__.py  base_types.py  constants.py  context.py  events.py  exception.py  id_generator.py  logging.py  scope.py  serialise.py  types.py  worker.py  workflow.py
zahir/context/: __init__.py  memory.py
zahir/dependencies/: __init__.py  concurrency.py  group.py  job.py  predicate.py  resources.py  semaphore.py  sqlite.py  time.py
zahir/event_registry/: __init__.py  memory.py  sqlite.py
zahir/job_registry/: __init__.py  memory.py  sqlite.py  state_event.py
zahir/jobs/: __init__.py  decorator.py  empty.py  retry.py  sleep.py
zahir/monitoring/: __init__.py  (+2 more)
(+176 files in other folders)
