[project]
name = "zahir2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pdoc>=16.0.0",
    "psutil>=7.2.2",
    "rich>=13.0.0",
    "tertius",
]

[dependency-groups]
dev = [
    "bookman>=0.5",
    "orbis",
    "pyright>=1.1.408",
    "pytest",
    "pytest-cov>=7.1.0",
    "tertius",
    "time-machine",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["local_only: test only runs on the local dev machine, skipped in CI"]

[tool.ruff.lint]
select = ["E402", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.uv]
package = true

[tool.uv.sources]
bookman = { path = "../sand", editable = true }
orbis = { path = "../orbis", editable = true }
tertius = { path = "../tertius", editable = true }
