[project]
name = "zahir2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pdoc>=16.0.0",
    "psutil>=7.2.2",
    "rich>=13.0.0",
    "tertius",
]

[dependency-groups]
dev = [
    "bookman>=0.5",
    "mypy>=1.20.2",
    "orbis",
    "pyright>=1.1.408",
    "pytest",
    "pytest-cov>=7.1.0",
    "tertius",
    "time-machine",
    "vulture",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["local_only: test only runs on the local dev machine, skipped in CI"]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "BLE", "SIM", "RUF", "PLR", "C"]

[tool.ruff.lint.pylint]
max-args = 4

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.mypy]
ignore_missing_imports = true

[tool.uv]
package = true

[tool.uv.sources]
bookman = { path = "../bookman", editable = true }
orbis = { path = "../orbis", editable = true }
tertius = { path = "../tertius", editable = true }
