[project]
name = "zahir2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pdoc>=16.0.0",
    "psutil>=7.2.2",
    "rich>=13.0.0",
    "tertius",
    "typing-extensions>=4.15.0",
]

[tool.uv.sources]
tertius = { path = "../tertius", editable = true }
orbis = { path = "../orbis", editable = true }
bookman = { path = "../bookman", editable = true }

[dependency-groups]
dev = [
    "bookman>=0.5",
    "mypy>=1.20.2",
    "orbis",
    "pyright>=1.1.408",
    "pytest",
    "pytest-cov>=7.1.0",
    "tertius",
    "time-machine",
    "vulture",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["local_only: test only runs on the local dev machine, skipped in CI"]

[tool.pyright]
# vulture_whitelist is not real code; attribute stubs marking dynamically-read names as used.
exclude = ["vulture_whitelist.py", "**/__pycache__", ".venv", "docs"]

[tool.ruff]
line-length = 100
preview = true
# Not real code; attribute stubs that mark dynamically-read names as used.
extend-exclude = ["vulture_whitelist.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "BLE", "SIM", "RUF", "PLR", "PLC", "C"]
# B901: zahir's handlers and jobs are generators that return values via StopIteration.
ignore = ["B901"]

[tool.ruff.lint.per-file-ignores]
# Explicit `X as X` re-export idiom; __init__.py files are exports only.
"**/__init__.py" = ["PLC0414"]
# Tests use literal expected values and white-box imports of internal handlers.
"tests/**" = ["PLR2004", "PLC2701"]

[tool.ruff.lint.pylint]
max-statements = 14
max-args = 4

[tool.ruff.lint.mccabe]
max-complexity = 7
